Fixed content spacing

--- a/style.css
+++ b/style.css
@@ -2,18 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none;
-  list-style: none;
+  
+  
 }
 body {
   font-family: "Interstate", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Garuda, Verdana, Tahoma, sans-serif;
   background: #f3f5f9;
 }
-
-/*.wrapper {
-  display: flex;
-  position: relative;
-} */
 
 #navbar {
   margin: 0;
@@ -30,7 +25,6 @@ body {
   text-transform: uppercase;
   text-align: center;
   margin-top: 20px;
-  
 }
 
 #navbar ul li {
@@ -43,6 +37,8 @@ body {
   color: #fff;
   padding: 16px;
   margin-top: 5px;
+  text-decoration: none;
+  list-style: none;
 }
 
 #navbar ul li:hover {
@@ -51,8 +47,24 @@ body {
 
 #main-doc {
   margin-left: 200px;
-  padding:1px 16px;
+  padding: 1px 30px;
   height: 1000px;
+}
+
+.main-section:first-of-type {
+  padding-top: 30px;
+}
+
+.main-section:nth-child(2) {
+  padding-top: 30px;
+}
+
+.main-section :nth-of-type(3) {
+  padding-top: 10px;
+}
+
+.main-section :nth-of-type(4) {
+  padding-top: 10px;
 }
 
 @media screen and (max-width: 700px) {
@@ -65,9 +77,3 @@ body {
   #main-doc {margin-left: 0;}
 }
 
-@media screen and (max-width: 400px) {
-  #navbar a {
-    
-    float: 
-  }
-}
